turning things from right-handed to left-handed